add expense details page

--- a/utils/locales/ar/translation.json
+++ b/utils/locales/ar/translation.json
@@ -178,6 +178,7 @@
     "moreCategoriesCount": "+{{count}} فئات أخرى",
     "groupMembers": "أعضاء المجموعة"
   },
+
   "expense": {
     "paidBy": "دفع من قبل {{name}}",
     "amount": "{{amount}} {{currency}}",
@@ -193,6 +194,42 @@
     "splitBetween": "تقسيم بين",
     "note": "ملاحظة",
     "added_success": "تم إضافة المصروف بنجاح",
+    "details": {
+      "title": "تفاصيل المصروف",
+      "information": "المعلومات",
+      "description": "الوصف",
+      "paidBy": "دفع من قبل",
+      "date": "التاريخ",
+      "time": "الوقت",
+      "group": "المجموعة",
+      "edit": "تعديل المصروف",
+      "share": "مشاركة المصروف",
+      "delete": "حذف المصروف",
+      "deleting": "جاري الحذف..."
+    },
+    "delete": {
+      "title": "حذف المصروف",
+      "message": "هل أنت متأكد من أنك تريد حذف هذا المصروف؟ لا يمكن التراجع عن هذا الإجراء.",
+      "success": {
+        "title": "تم حذف المصروف",
+        "message": "تم حذف المصروف بنجاح."
+      },
+      "error": {
+        "title": "فشل في الحذف",
+        "message": "فشل في حذف المصروف. يرجى المحاولة مرة أخرى."
+      }
+    },
+    "share": {
+      "title": "تفاصيل المصروف",
+      "text": "المصروف: {{title}}\nالمبلغ: {{amount}} {{currency}}\nالفئة: {{category}}\nدفع من قبل: {{paidBy}}\nالتاريخ: {{date}}",
+      "error": {
+        "title": "فشلت المشاركة",
+        "message": "تعذر مشاركة المصروف. يرجى المحاولة مرة أخرى."
+      }
+    },
+    "category": {
+      "unknown": "فئة غير معروفة"
+    },
     "validation": {
       "expenseNameRequired": "اسم المصروف مطلوب",
       "amountRequired": "المبلغ مطلوب",
@@ -204,17 +241,21 @@
     "loading": "جاري تحميل المصروفات...",
     "loadingMore": "جاري تحميل المزيد من المصروفات...",
     "search": {
-      "placeholder": "مثل: \"wifi\""
+      "placeholder": "مثال: \"مطعم\""
     },
     "empty": {
       "title": "لا توجد مصروفات بعد",
-      "description": "ابدأ بإضافة أول مصروف لك. تتبع من دفع ماذا وقسمه بعدالة بين أعضاء مجموعتك.",
+      "description": "ابدأ بإضافة مصروفك الأول. احتفظ بسجل لمن دفع ماذا وقسمه بعدالة بين أعضاء مجموعتك.",
+      "addFirstExpense": "أضف مصروفك الأول",
       "noResults": "لم يتم العثور على نتائج",
-      "tryDifferentFilters": "جرب تعديل معايير البحث أو الفلتر للعثور على ما تبحث عنه."
+      "tryDifferentFilters": "حاول تعديل معايير البحث أو المرشح للعثور على ما تبحث عنه."
     },
     "error": {
       "title": "عذراً! حدث خطأ ما",
-      "tryAgain": "حاول مرة أخرى"
+      "tryAgain": "حاول مرة أخرى",
+      "notFound": "المصروف غير موجود",
+      "loadFailed": "فشل في تحميل تفاصيل المصروف",
+      "invalidId": "معرف المصروف غير صحيح"
     },
     "errors": {
       "loadFailed": "فشل في تحميل المصروفات"
