implement update expense

--- a/utils/locales/ar/translation.json
+++ b/utils/locales/ar/translation.json
@@ -157,7 +157,8 @@
     "done": "تم",
     "days": "أيام",
     "confirm": "تأكيد",
-    "apply": "تطبيق"
+    "apply": "تطبيق",
+    "updating": "جاري التحديث..."
   },
   "home": {
     "goodMorning": "صباح الخير 👋",
