handle firebase errors

--- a/utils/locales/ar/translation.json
+++ b/utils/locales/ar/translation.json
@@ -66,7 +66,10 @@
     "google": "جوجل",
     "apple": "أبل",
     "already_have_account": "لديك حساب بالفعل؟ ",
-    "login": "تسجيل الدخول"
+    "login": "تسجيل الدخول",
+    "success_title": "تم إنشاء الحساب بنجاح",
+    "success_message": "تم إنشاء حسابك بنجاح!",
+    "error_title": "فشل إنشاء الحساب"
   },
   "settings": {
     "title": "الإعدادات",
@@ -557,5 +560,22 @@
     "cancel": "إلغاء",
     "logout": "تسجيل الخروج",
     "loggingOut": "جاري تسجيل الخروج..."
+  },
+  "auth": {
+    "errors": {
+      "email_already_in_use": "عنوان البريد الإلكتروني مسجل بالفعل. يرجى استخدام بريد إلكتروني مختلف أو محاولة تسجيل الدخول.",
+      "invalid_email": "يرجى إدخال عنوان بريد إلكتروني صحيح.",
+      "operation_not_allowed": "المصادقة بالبريد الإلكتروني وكلمة المرور غير مفعلة. يرجى التواصل مع الدعم.",
+      "weak_password": "كلمة المرور ضعيفة جداً. يرجى اختيار كلمة مرور أقوى.",
+      "network_error": "خطأ في الشبكة. يرجى التحقق من اتصال الإنترنت والمحاولة مرة أخرى.",
+      "too_many_requests": "طلبات كثيرة جداً. يرجى المحاولة مرة أخرى لاحقاً.",
+      "user_disabled": "تم إيقاف هذا الحساب. يرجى التواصل مع الدعم.",
+      "requires_recent_login": "يرجى تسجيل الدخول مرة أخرى لإكمال هذا الإجراء.",
+      "credential_already_in_use": "هذه البيانات مرتبطة بالفعل بحساب آخر.",
+      "invalid_credentials": "البريد الإلكتروني أو كلمة المرور غير صحيحة. يرجى التحقق من البيانات والمحاولة مرة أخرى.",
+      "user_not_found": "لا يوجد حساب بهذا البريد الإلكتروني.",
+      "wrong_password": "كلمة المرور غير صحيحة. يرجى المحاولة مرة أخرى.",
+      "general": "حدث خطأ. يرجى المحاولة مرة أخرى."
+    }
   }
 }
