--- a/utils/locales/fr/translation.json
+++ b/utils/locales/fr/translation.json
@@ -67,7 +67,10 @@
     "google": "Google",
     "apple": "Apple",
     "already_have_account": "Vous avez déjà un compte ? ",
-    "login": "Se connecter"
+    "login": "Se connecter",
+    "success_title": "Connexion réussie",
+    "success_message": "Bon retour parmi nous !",
+    "error_title": "Échec de la connexion"
   },
   "settings": {
     "title": "Paramètres",
@@ -557,5 +560,22 @@
     "cancel": "Annuler",
     "logout": "Se déconnecter",
     "loggingOut": "Déconnexion en cours..."
+  },
+  "auth": {
+    "errors": {
+      "email_already_in_use": "Cette adresse e-mail est déjà enregistrée. Veuillez utiliser une autre adresse ou essayer de vous connecter.",
+      "invalid_email": "Veuillez saisir une adresse e-mail valide.",
+      "operation_not_allowed": "L'authentification par e-mail/mot de passe n'est pas activée. Veuillez contacter le support.",
+      "weak_password": "Le mot de passe est trop faible. Veuillez choisir un mot de passe plus fort.",
+      "network_error": "Erreur réseau. Veuillez vérifier votre connexion Internet et réessayer.",
+      "too_many_requests": "Trop de demandes. Veuillez réessayer plus tard.",
+      "user_disabled": "Ce compte a été désactivé. Veuillez contacter le support.",
+      "requires_recent_login": "Veuillez vous reconnecter pour terminer cette action.",
+      "credential_already_in_use": "Ces identifiants sont déjà associés à un autre compte.",
+      "invalid_credentials": "E-mail ou mot de passe invalide. Veuillez vérifier vos informations et réessayer.",
+      "user_not_found": "Aucun compte trouvé avec cette adresse e-mail.",
+      "wrong_password": "Mot de passe incorrect. Veuillez réessayer.",
+      "general": "Une erreur s'est produite. Veuillez réessayer."
+    }
   }
 }
