add tour translation for arabic and french

--- a/utils/locales/ar/translation.json
+++ b/utils/locales/ar/translation.json
@@ -578,5 +578,43 @@
       "wrong_password": "كلمة المرور غير صحيحة. يرجى المحاولة مرة أخرى.",
       "general": "حدث خطأ. يرجى المحاولة مرة أخرى."
     }
+  },
+  "tour": {
+    "skip": "تخطي الجولة",
+    "next": "التالي",
+    "previous": "السابق",
+    "finish": "إنهاء",
+    "welcome": {
+      "title": "مرحباً بك في قسامة!",
+      "description": "دعنا نأخذ جولة سريعة لمساعدتك في البدء بإدارة مصاريفك المشتركة."
+    },
+    "profile": {
+      "title": "ملفك الشخصي",
+      "description": "اضغط هنا لعرض وتعديل معلومات ملفك الشخصي."
+    },
+    "notifications": {
+      "title": "الإشعارات",
+      "description": "ابق على اطلاع بإشعارات المصاريف وأنشطة المجموعة."
+    },
+    "balance": {
+      "title": "نظرة عامة على الرصيد",
+      "description": "شاهد كم تدين وكم يدين لك الآخرون في لمحة."
+    },
+    "overview": {
+      "title": "النظرة الشهرية",
+      "description": "تتبع مصاريفك الشهرية بالرسوم البيانية المرئية والملخصات."
+    },
+    "recent_activity": {
+      "title": "النشاط الأخير",
+      "description": "اعرض آخر معاملاتك وأنشطة المصاريف."
+    },
+    "see_all": {
+      "title": "عرض جميع المصاريف",
+      "description": "اضغط هنا لعرض جميع مصاريفك بالتفصيل."
+    },
+    "bottom_navigation": {
+      "title": "التنقل",
+      "description": "استخدم علامات التبويب السفلية للتنقل بين الرئيسية، مصروف جديد، المجموعات، والملف الشخصي."
+    }
   }
 }
