Update split with option

--- a/utils/locales/ar/translation.json
+++ b/utils/locales/ar/translation.json
@@ -163,7 +163,8 @@
     "days": "أيام",
     "confirm": "تأكيد",
     "apply": "تطبيق",
-    "updating": "جاري التحديث..."
+    "updating": "جاري التحديث...",
+    "summary": "ملخص"
   },
   "home": {
     "goodMorning": "صباح الخير 👋",
@@ -259,7 +260,13 @@
       "enterPersonName": "أدخل اسم الشخص",
       "selectGroupFirst": "اختر مجموعة أولاً",
       "equalSplit": "تقسيم متساوي",
-      "noMembers": "لا يوجد أعضاء للمشاركة معهم"
+      "noMembers": "لا يوجد أعضاء للمشاركة معهم",
+      "tapToEdit": "اضغط للتعديل",
+      "editSplit": "تعديل التقسيم",
+      "people": "أشخاص",
+      "splitWith": "تقسيم مع",
+      "enableSplit": "تفعيل التقسيم",
+      "enterAmountFirst": "أدخل المبلغ أولاً"
     },
     "validation": {
       "expenseNameRequired": "اسم المصروف مطلوب",
