fix translation in expense list

--- a/utils/locales/ar/translation.json
+++ b/utils/locales/ar/translation.json
@@ -289,7 +289,8 @@
     "loading": "جاري تحميل المصروفات...",
     "loadingMore": "جاري تحميل المزيد من المصروفات...",
     "search": {
-      "placeholder": "مثال: \"مطعم\""
+      "placeholder": "مثال: \"مطعم\"",
+      "resultsCount": "عدد النتائج"
     },
     "empty": {
       "title": "لا توجد مصروفات بعد",
