--- a/utils/locales/fr/translation.json
+++ b/utils/locales/fr/translation.json
@@ -289,7 +289,8 @@
     "loading": "Chargement des dépenses...",
     "loadingMore": "Chargement de plus de dépenses...",
     "search": {
-      "placeholder": "Ex : \"Restaurant\""
+      "placeholder": "Ex : \"Restaurant\"",
+      "resultsCount": "Nombre de résultats"
     },
     "empty": {
       "title": "Aucune dépense pour le moment",
