--- a/utils/locales/ar/translation.json
+++ b/utils/locales/ar/translation.json
@@ -496,7 +496,8 @@
     "profile": "الملف الشخصي",
     "back": "رجوع",
     "next": "التالي",
-    "done": "تم"
+    "done": "تم",
+    "achievements": "الإنجازات"
   },
   "invitations": {
     "join": "الانضمام إلى \"{{groupName}}\"؟",
@@ -661,5 +662,9 @@
       "title": "التنقل",
       "description": "استخدم علامات التبويب السفلية للتنقل بين الرئيسية، مصروف جديد، المجموعات، والملف الشخصي."
     }
+  },
+  "achievements": {
+    "title": "الإنجازات",
+    "description": "تتبع إنجازاتك والمعالم الهامة."
   }
 }
